--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-07 14:08:04
-# Total rules: 12212
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-08 08:54:51
+# Total rules: 12238
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -464,6 +464,7 @@
 .a21625780072.cdn.optimizely.com
 .a21630000199.cdn.optimizely.com
 .a21645491094.cdn.optimizely.com
+.a21711352012.cdn.optimizely.com
 .a21711432014.cdn.optimizely.com
 .a21723500485.cdn.optimizely.com
 .a21729970583.cdn.optimizely.com
@@ -972,8 +973,10 @@
 .a45090.com-cloud-xcx3rdfs-machine-learning-xcx3rd.pc.1.oppo.cn
 .a45090.com-hwhe-i-topic-wxopen-learning-12-swagger.lb.1.oppo.cn
 .a45090.com.hw.1.oppo.cn
+.a4511881872801792.cdn.optimizely.com
 .a4513484151455744.cdn.optimizely.com
 .a4533470681104384.cdn.optimizely.com
+.a4544552325873664.cdn.optimizely.com
 .a4557234282168320.cdn.optimizely.com
 .a4602001816813568.cdn.optimizely.com
 .a4614783295553536.cdn.optimizely.com
@@ -1011,6 +1014,7 @@
 .a523170811.cdn.optimizely.com
 .a524690941.cdn.optimizely.com
 .a5250744593416192.cdn.optimizely.com
+.a5263375337259008.cdn.optimizely.com
 .a5270536083734528.cdn.optimizely.com
 .a5271073.cdn.optimizely.com
 .a5292374380249088.cdn.optimizely.com
@@ -1031,6 +1035,7 @@
 .a553480116.cdn.optimizely.com
 .a5552561554456576.cdn.optimizely.com
 .a5552864383205376.cdn.optimizely.com
+.a5579006410489856.cdn.optimizely.com
 .a5584628518486016.cdn.optimizely.com
 .a5595260258.cdn.optimizely.com
 .a5607107806887936.cdn.optimizely.com
@@ -1047,6 +1052,7 @@
 .a5809436334227456.cdn.optimizely.com
 .a582891733.cdn.optimizely.com
 .a5838709522694144.cdn.optimizely.com
+.a5839278056407040.cdn.optimizely.com
 .a5877482797137920.cdn.optimizely.com
 .a591102174.cdn.optimizely.com
 .a5935064.cdn.optimizely.com
@@ -1062,12 +1068,15 @@
 .a61135178.cdn.optimizely.com
 .a6131884851.cdn.optimizely.com
 .a6136581106.cdn.optimizely.com
+.a6146157886308352.cdn.optimizely.com
 .a6147442509348864.cdn.optimizely.com
 .a6147784059912192.cdn.optimizely.com
 .a6169963916951552.cdn.optimizely.com
 .a6194110778.cdn.optimizely.com
 .a6207300250632192.cdn.optimizely.com
 .a6207841426472960.cdn.optimizely.com
+.a6217617971609600.cdn.optimizely.com
+.a6238166017900544.cdn.optimizely.com
 .a6253774759526400.cdn.optimizely.com
 .a6263502310998016.cdn.optimizely.com
 .a627150995.cdn.optimizely.com
@@ -1076,6 +1085,7 @@
 .a6354269197041664.cdn.optimizely.com
 .a6372928330137600.cdn.optimizely.com
 .a6376052200046592.cdn.optimizely.com
+.a6403762990874624.cdn.optimizely.com
 .a6451678757519360.cdn.optimizely.com
 .a6502622515.cdn.optimizely.com
 .a6504733288955904.cdn.optimizely.com
@@ -1243,9 +1253,9 @@
 .ad-interactions-prod-lb-773417274.us-east-2.elb.amazonaws.com
 .ad-log-upload-os.mihoyo.com
 .ad-log-upload.mihoyo.com
-.ad-material.ys7.com
 .ad-ops-assets.s3.us-east-1.amazonaws.com
 .ad-pdf.s3.amazonaws.com
+.ad-reporting.forbes.com
 .ad-scope.com.cn
 .ad-sdk.huxiu.com
 .ad-serve.b-cdn.net
@@ -1510,6 +1520,7 @@
 .ads-monitoring.papegames.com
 .ads-privacy-api.prd.mz.internal.unity3d.com
 .ads-prod-narrowcasting.s3.us-west-2.amazonaws.com
+.ads-product-integration.googleusercontent.com
 .ads-production-public.s3.amazonaws.com
 .ads-production-public.s3.us-east-1.amazonaws.com
 .ads-script.b-cdn.net
@@ -2042,8 +2053,6 @@
 .analytics.notify.elsevier.com.cdn.cloudflare.net
 .analytics.org.coveo.com
 .analytics.orghipaa.coveo.com
-.analytics.p04.eloqua.com
-.analytics.p06.eloqua.com
 .analytics.paddle.com
 .analytics.pangle-ads.com.edgesuite.net
 .analytics.pgncs.notion.so
@@ -2152,6 +2161,7 @@
 .api-access.pangolin-sdk-toutiao.com.w.cdngslb.com
 .api-access.pangolin-sdk-toutiao1.com.w.cdngslb.com
 .api-ad-adapter-mb.wps.com
+.api-ad-adapter-sg.wps.com
 .api-ad-adapter.wps.com
 .api-ad-product.huxiu.com
 .api-adservices.apple.com
@@ -2566,6 +2576,7 @@
 .beamanalytics.b-cdn.net
 .beap-bc.yahoo.com
 .bectondickinsonandcompany.data.adobedc.net
+.bedrosians.data.adobedc.net
 .bee-apps.s3.us-east-2.amazonaws.com
 .beehiiv-adnetwork-production.s3.amazonaws.com
 .beizi.biz
@@ -2902,6 +2913,7 @@
 .cedarssinaimedicalcenter.data.adobedc.net
 .centene.com.data.adobedc.net
 .centene.data.adobedc.net
+.centralprovidentfundboard.data.adobedc.net
 .cert-test.sandbox.google.com
 .certify-issues-details-case.netlify.app
 .ceshi127722.obs.cn-north-4.myhuaweicloud.com
@@ -2913,6 +2925,7 @@
 .cgi.connect.qq.com
 .cgi.pub.qq.com
 .cgicol.amap.com
+.cgpsx3qhmo.data.adobedc.net
 .champagne.futurecdn.net
 .changyan.sohu.com
 .channel-analysis-js.gmw.cn
@@ -2946,7 +2959,6 @@
 .cimb.data.adobedc.net
 .cir-smart.baidu.com
 .cirrus-full-snapshots-track-csv-v1-0-eu-prod.s3.eu-west-1.amazonaws.com
-.cis.sohu.com
 .citrixanalyticseh-alias.servicebus.windows.net
 .citrixanalyticseh.servicebus.windows.net
 .citrixanalyticseh2-alias.servicebus.windows.net
@@ -2997,7 +3009,6 @@
 .click.oneplus.com
 .click.sender.yandex.ru
 .click.simba.taobao.com
-.click.tanx.com
 .click.tz.simba.taobao.com
 .click2.hd.sohu.com
 .click360v2-ingest.azurewebsites.net
@@ -3300,6 +3311,7 @@
 .collector-pxjbdhncwl.px-cloud.net
 .collector-pxjesgwpzk.px-cloud.net
 .collector-pxji55fafe.px-cloud.net
+.collector-pxjjodo4kj.px-cloud.net
 .collector-pxjmbe7t0q.px-cloud.net
 .collector-pxjmcvubg8.px-cloud.net
 .collector-pxjzi79agz.px-cloud.net
@@ -3321,6 +3333,7 @@
 .collector-pxkknkrjgu.pxchk.net
 .collector-pxkm4nwu16.px-cloud.net
 .collector-pxkogoppbz.px-cloud.net
+.collector-pxkoyq37gh.px-cloud.net
 .collector-pxkp4clsb5.px-cloud.net
 .collector-pxktmrtopw.px-cdn.net
 .collector-pxktmrtopw.px-cloud.net
@@ -3418,6 +3431,7 @@
 .collector-pxszbf5p84.px-cloud.net
 .collector-pxt1p5rban.px-cloud.net
 .collector-pxt6dy78t8.px-cloud.net
+.collector-pxt6hysu6b.px-cloud.net
 .collector-pxt8yg6fbv.px-cloud.net
 .collector-pxtafvwz61.px-cloud.net
 .collector-pxtfwrrc9p.px-cloud.net
@@ -3450,6 +3464,7 @@
 .collector-pxvlufj7uv.px-cdn.net
 .collector-pxvlufj7uv.px-cloud.net
 .collector-pxvlufj7uv.pxchk.net
+.collector-pxvtb0vdec.px-cloud.net
 .collector-pxvtidnbtc.px-cloud.net
 .collector-pxw0g1k35b.px-cloud.net
 .collector-pxw2r2if6r.px-cloud.net
@@ -5363,6 +5378,7 @@
 .data.dm.casio.com.data.adobedc.net
 .data.dm.casio.info.data.adobedc.net
 .data.e.adobe.com
+.data.em.viking.com.data.adobedc.net
 .data.em2.cloudflare.com
 .data.email-discovery.cjm.adobe.com
 .data.email-disney.cjm.adobe.com
@@ -5461,6 +5477,7 @@
 .dd6zx4ibq538k.cloudfront.net
 .ddacn6pr5v0tl.cloudfront.net
 .ddfnmo6ev4fd.cloudfront.net
+.ddjpc.lg.com
 .ddla593ymz72o.cloudfront.net
 .ddlh1467paih3.cloudfront.net
 .ddms.jd.com
@@ -5712,7 +5729,6 @@
 .dmxhgf4zuwdvu.cloudfront.net
 .dmxleo.dailymotion.com
 .dmz3nd5oywtsw.cloudfront.net
-.dn-growing.qbox.me
 .dn0qt3r0xannq.cloudfront.net
 .dn34cbtcv9mef.cloudfront.net
 .dn3uy6cx65ujf.cloudfront.net
@@ -5804,6 +5820,7 @@
 .dp94m8xzwqsjk.cloudfront.net
 .dpb3g4kqr8xz.cloudfront.net
 .dpd9yiocsyy6p.cloudfront.net
+.dpdhb75zux.data.adobedc.net
 .dpeqm8xv96fuc.cloudfront.net
 .dpg-ads-banners-prod-5cbbeba4.s3-eu-west-1.amazonaws.com
 .dpi.networkorder.komect.com
@@ -6011,6 +6028,7 @@
 .e1.o.lencr.org
 .e20d8e38992b.o3n.io
 .e77lmzbqou0n-a.akamaihd.net
+.e8u2tnpszf.data.adobedc.net
 .earth.cointelegraph.com
 .easygdpr.b-cdn.net
 .easytomessage.com
@@ -6039,6 +6057,7 @@
 .eduad.baidu.com
 .eec.crunchyroll.com
 .eel.transistor.fm
+.eex8nehrx0-default-cn.rum.aliyuncs.com
 .ef-dongfeng.tanx.com
 .ef69yesd00-default-cn.rum.aliyuncs.com
 .effect.snssdk.com
@@ -6408,6 +6427,7 @@
 .fpb.sohu.com
 .fpb1.sohu.com
 .fpcdn.io
+.fpjs.io
 .fpt.commerce.adobe.com
 .fpt.microsoft.com
 .fptls.com
@@ -6641,6 +6661,7 @@
 .gpp-wrapper.privacymanager.io
 .gpp.privacymanager.io
 .gr-gallery-hornyvideos4free-gr.netlify.app
+.graffiti-tags.apple.com
 .grand.ele.me
 .grapeshot.co.uk
 .graph-fallback.instagram.com
@@ -6720,6 +6741,7 @@
 .h5collector.mihoyo.com
 .h5log-api-dualstack.mihoyo.com
 .h6.msn.com
+.h6uzemwry4.data.adobedc.net
 .haa3j9plpi-default-cn.rum.aliyuncs.com
 .haitaoad.nosdn.127.net
 .haiwai-ic.ksosoft.com
@@ -7031,6 +7053,7 @@
 .igcum80w74.data.adobedc.net
 .igexin.com
 .iha-analytics.vercel.app
+.iix5saebir.data.adobedc.net
 .ikcart.alipay.com
 .ikcode.baidu.com
 .ilce.alicdn.com
@@ -7151,6 +7174,7 @@
 .inc-visio-telemetry.officeapps.live.com
 .incoming-data-sense360.s3.amazonaws.com
 .increaserev2.static-cloudflare.workers.dev
+.increaserev3.static-cloudflare.workers.dev
 .indexww.com
 .india.miui.com
 .indianetouristvisacoin.wordpress.com
@@ -7239,6 +7263,7 @@
 .irs01.youku.com
 .is-lq.snssdk.com
 .is-tracking-pixel-api-prod.appspot.com
+.is.lg.com
 .is.snssdk.com.w.alikunlun.com
 .isagi-two-gun-volley.pages.dev
 .isdspeed.qq.com
@@ -7257,6 +7282,7 @@
 .its-dori.tumblr.com
 .itsdata.map.baidu.com
 .iu.snssdk.com
+.ivkpkdxs6q.data.adobedc.net
 .ivy.pconline.com.cn
 .ivypacfdyy.data.adobedc.net
 .iwallet-1258175138.file.myqcloud.com
@@ -7292,6 +7318,7 @@
 .jingjia.qq.com
 .jjpp.lmtjapi.com
 .jly24aw29n5m-a.akamaihd.net
+.jmle12nx5v.data.adobedc.net
 .jmt17.google.com
 .johnhancockfinancialservices.data.adobedc.net
 .join.zendesk.com
@@ -7358,6 +7385,7 @@
 .kde.qq.com
 .kepler.jd.com
 .keplerapi.jd.com
+.kew3pculob.data.adobedc.net
 .key.com.data.adobedc.net
 .keyrotate.qq.com
 .kgb-ifs.tanx.com
@@ -7433,6 +7461,7 @@
 .lapin.ithome.com
 .larapush.com
 .lasopabowl158.weebly.com
+.later-analytics-reports.s3-accelerate.amazonaws.com
 .launch.apple.com
 .launcher.baidu.com
 .launchpad-wrapper.privacymanager.io
@@ -7743,7 +7772,6 @@
 .login.optimizely.com
 .logitech.com.data.adobedc.net
 .logn-trezr-account.weebly.com
-.logs-1.algolia.com
 .logs.amap.com
 .logs.appsource.microsoft.com
 .logs.betterstack.com
@@ -7868,7 +7896,6 @@
 .luimg.baidu.com
 .lupic.cdn.bcebos.com
 .lvip.youku.com
-.lvm5ybt1fm.data.adobedc.net
 .lx0.meituan.com
 .lxcdn.dl.files.xiaomi.net
 .lycamobileuklimited.data.adobedc.net
@@ -8059,6 +8086,7 @@
 .metrics.hyperliquid.xyz
 .metrics.icloud.com
 .metrics.kiwix.org
+.metrics.manus.im
 .metrics.mastercard.com
 .metrics.media-amazon.com
 .metrics.morningstar.com
@@ -8423,7 +8451,6 @@
 .nexusrules.officeapps.live.com
 .nexxtv-events.servicebus.windows.net
 .nfa.jd.com
-.nflshop.com.data.adobedc.net
 .nfsvgvusih.data.adobedc.net
 .nhtradecfg.eastmoney.com
 .nifty-tracking-eastus-ext.eastus.cloudapp.azure.com
@@ -8540,6 +8567,7 @@
 .omni.conferencing.pccw.com
 .omni.istockphoto.com
 .omniture-ssl.walmart.com
+.omniture.lg.com
 .omniture.walmart.com
 .oms.barrons.com
 .oms.wsj.com
@@ -8878,7 +8906,6 @@
 .pinksales-pools.pages.dev
 .pipe.aria.microsoft.com
 .pipedream.wistia.com
-.pis-tel-pcdn.youku.com
 .piwik.fsfe.org
 .piwik.pcgamingwiki.com
 .piwik.wikimedia.org
@@ -8959,6 +8986,7 @@
 .poster.weather.com.cn
 .posthog-proxy-service-prod-eu-bfb365ef029ea8b9.elb.eu-central-1.amazonaws.com
 .posthog-proxy-service-prod-us-786081f7c4028325.elb.us-east-1.amazonaws.com
+.posthog-reverse-proxy-virid.vercel.app
 .posthog.com
 .posthog.substack.com
 .postrelease.com
@@ -8996,7 +9024,6 @@
 .privacyfriendly.netlify.app
 .privchat-6cc58-default-rtdb.firebaseio.com
 .pro.baidu.com
-.prod-analytics-api-1407320161.ap-east-1.elb.amazonaws.com
 .prod-dem-collector-elb-611025824.eu-west-1.elb.amazonaws.com
 .prod-eh-v1-analytics.servicebus.windows.net
 .prod-event-relay-books-api.v.aaplimg.com
@@ -9126,7 +9153,6 @@
 .q.nasdaq.com
 .q0jo16uy1r.data.adobedc.net
 .qa-brc.emails.rakuten.com
-.qantasairways.data.adobedc.net
 .qapm.baidu.com
 .qbreport.html5.qq.com
 .qbwup.html5.qq.com
@@ -9136,6 +9162,7 @@
 .qc.wired.com
 .qchannel01.cn
 .qchannel03.cn
+.qchoh.lg.com
 .qgumjp.joins.com
 .qhl.bealge.sogou.com
 .qianclick.baidu.com
@@ -9233,7 +9260,6 @@
 .reader.sh.vip.qq.com
 .reading-lq.snssdk.com
 .readserver.cachefly.net
-.realmadridclubdefutbol.data.adobedc.net
 .rec5.visualwebsiteoptimizer.com
 .recipe-tracker-cno2ebznoq-uc.a.run.app
 .recmd.html5.qq.com
@@ -9350,7 +9376,6 @@
 .robux60ktapmexu.blogspot.com
 .rocket.snssdk.com
 .roeyecdn.com
-.rogerscommunicationspartnership.data.adobedc.net
 .roi.soulapp.cn
 .romeccs.microsoft.com
 .routertips.video.qq.com
@@ -9634,7 +9659,6 @@
 .seal.godaddy.com
 .sealine.youku.com
 .seao.business.samsung.com
-.search-hll-dev-analytics-jn2doyvzdresfegp673q3pdn3m.eu-west-1.es.amazonaws.com
 .search.anonymous.ads.brave.com
 .search.miui.com
 .searchad-phinf.pstatic.net
@@ -9818,7 +9842,6 @@
 .server-side-tagging-65dsz6yblq-uc.a.run.app
 .server-side-tagging-65uqpx3cnq-uc.a.run.app
 .server-side-tagging-65zl24oauq-uc.a.run.app
-.server-side-tagging-66242uprha-uc.a.run.app
 .server-side-tagging-672ritsaca-uc.a.run.app
 .server-side-tagging-67nldtwksq-uc.a.run.app
 .server-side-tagging-6ccyuxcvpa-uc.a.run.app
@@ -10537,6 +10560,7 @@
 .sorteiosbrasil.netlify.app
 .soup.v.qq.com
 .sovetnik.market.yandex.ru
+.soxnwz.lg.com
 .sp-mms.weather.com
 .sp-wukong-tracker.b-cdn.net
 .sp.ecosia.org
@@ -10605,7 +10629,6 @@
 .st-fly.b-cdn.net
 .st-offlinegame.vivo.com.cn
 .st-sentinel.vivo.com.cn
-.st.appsad.cn
 .st3.wagbridge.advertisement.tanx.com
 .staging-analyze.pt.xiaomi.com
 .staging.ai.api.xiaomi.com
@@ -10616,6 +10639,7 @@
 .star-randsrv.bsg.brave.com
 .star-randsrv.bsg.bravesoftware.com
 .star-seo.oss-ap-northeast-1.aliyuncs.com
+.starbucks.com.data.adobedc.net
 .starfish.pandora.xiaomi.com
 .starkgame.zijieapi.com
 .starman.usefathom.com
@@ -11258,6 +11282,7 @@
 .tracking.intl.miui.com
 .tracking.launchdarkly.com
 .tracking.lenovo.com
+.tracking.lg.com
 .tracking.mail.ti.com
 .tracking.mcdonalds.com.cn
 .tracking.miui.com
@@ -11319,6 +11344,7 @@
 .tsn.baidu.com
 .tsyndicate.com
 .ttpsdk.info
+.ttr1udri3f.data.adobedc.net
 .ttse.b-cdn.net
 .tttppp.oss-cn-guangzhou.aliyuncs.com
 .tubescms.phncdn.com
@@ -11665,12 +11691,10 @@
 .video231.oss-cn-beijing.aliyuncs.com
 .videoplayerhub.com
 .videopush.baidu.com
-.vietnamairlines.data.adobedc.net
 .view.adjust.world
 .view.zijieapi.com
 .views.hulu.com.akadns.net
 .viglink.com
-.viking.com.data.adobedc.net
 .vilaghelyzete.blogspot.com
 .vip-api.xmpush.global.xiaomi.com
 .virusinfo-cloudscan-cn.heytapmobi.com
@@ -11681,6 +11705,7 @@
 .visualscience.external.bbc.co.uk
 .vkcdnservice.appspot.com
 .vkcdnservice.appspot.com.storage.googleapis.com
+.vl2vy9mrpj.data.adobedc.net
 .vlive.qqvideo.tc.qq.com
 .vmat.gtimg.com
 .vmindhls.tc.qq.com
@@ -11708,6 +11733,7 @@
 .vp.html5.qq.com
 .vpic.video.qq.com
 .vsblobprodscussu5shard66.blob.core.windows.net
+.vsblobprodscussu5shard82.blob.core.windows.net
 .vsh.pp.ua
 .vstat.my.tv.sohu.com
 .vstat.v.blog.sohu.com
@@ -11811,6 +11837,7 @@
 .webtracking-azfun-prod.azurewebsites.net
 .wegmansfoods.data.adobedc.net
 .weishi.baidu.com
+.wellainternational.data.adobedc.net
 .wellpoint.data.adobedc.net
 .wenku-cms.bj.bcebos.com
 .wes-skipperpaule.helpjuice.com
@@ -11849,7 +11876,6 @@
 .wixlabs-adsense-v3.uc.r.appspot.com
 .wkclick.baidu.com
 .wkctj.baidu.com
-.wkkpxr7e2l.data.adobedc.net
 .wklwyt.springer.com
 .wknd.ai
 .wl.hd.sohu.com
