--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-08 08:54:51
-# Total rules: 12238
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-08 14:46:09
+# Total rules: 12240
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -4793,6 +4793,7 @@
 .d2zbrsgwxpxcye.cloudfront.net
 .d2zcblk8m9mzq5.cloudfront.net
 .d2zd0wa1vpt7j9.cloudfront.net
+.d2zdzxjekh1km6.cloudfront.net
 .d2zf5gu5e5mp87.cloudfront.net
 .d2zh7okxrw0ix.cloudfront.net
 .d2zi8ra5rb7m89.cloudfront.net
@@ -11869,6 +11870,7 @@
 .window-shoppers.azurewebsites.net
 .winonexd.b-cdn.net
 .wip3.adobe.com
+.wisepops.com
 .wisepush.video.baidu.com
 .wit.qq.com
 .wix-engage-visitors-prod-16.firebaseio.com
