--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-08 14:46:09
-# Total rules: 12240
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-09 09:36:08
+# Total rules: 12229
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -976,7 +976,6 @@
 .a4511881872801792.cdn.optimizely.com
 .a4513484151455744.cdn.optimizely.com
 .a4533470681104384.cdn.optimizely.com
-.a4544552325873664.cdn.optimizely.com
 .a4557234282168320.cdn.optimizely.com
 .a4602001816813568.cdn.optimizely.com
 .a4614783295553536.cdn.optimizely.com
@@ -1007,6 +1006,7 @@
 .a5090114122.cdn.optimizely.com
 .a5110280405909504.cdn.optimizely.com
 .a5113954737848320.cdn.optimizely.com
+.a5132049628004352.cdn.optimizely.com
 .a5133694441095168.cdn.optimizely.com
 .a5160292989009920.cdn.optimizely.com
 .a5171550442225664.cdn.optimizely.com
@@ -1082,7 +1082,6 @@
 .a627150995.cdn.optimizely.com
 .a6295702960078848.cdn.optimizely.com
 .a6303072515784704.cdn.optimizely.com
-.a6354269197041664.cdn.optimizely.com
 .a6372928330137600.cdn.optimizely.com
 .a6376052200046592.cdn.optimizely.com
 .a6403762990874624.cdn.optimizely.com
@@ -1523,6 +1522,7 @@
 .ads-product-integration.googleusercontent.com
 .ads-production-public.s3.amazonaws.com
 .ads-production-public.s3.us-east-1.amazonaws.com
+.ads-rendering-prod.corp.google.com
 .ads-script.b-cdn.net
 .ads-sdk-gateway.prd.mz.internal.unity3d.com
 .ads-servebom-com.cdn.ampproject.org
@@ -1769,7 +1769,6 @@
 .advertising-api.amazon.com
 .advertising-eu.amazon.com
 .advertising.adobe.com
-.advertising.amazon.cn
 .advertising.amazon.co.jp
 .advertising.amazon.com
 .advertising.apple.com
@@ -2017,6 +2016,7 @@
 .analytics.ecosia.org
 .analytics.edgesuite.net
 .analytics.eu.kaltura.com
+.analytics.example.com
 .analytics.facebook.com
 .analytics.framer.com
 .analytics.frp2.ovp.kaltura.com
@@ -2063,7 +2063,6 @@
 .analytics.python.org
 .analytics.qualcomm.com
 .analytics.query.yahoo.com
-.analytics.rev.iq
 .analytics.routinehub.co
 .analytics.s3.amazonaws.com
 .analytics.sagepub.com
@@ -2513,7 +2512,6 @@
 .bam.nr-data.net.cdn.cloudflare.net
 .bancobmgsa.data.adobedc.net
 .bancodecreditodelperu.data.adobedc.net
-.bancodegaliciaybuenosairessau.data.adobedc.net
 .banconacionaldemexico.data.adobedc.net
 .bancopansa.data.adobedc.net
 .bankingbloatedcaptive.com
@@ -2576,7 +2574,6 @@
 .beamanalytics.b-cdn.net
 .beap-bc.yahoo.com
 .bectondickinsonandcompany.data.adobedc.net
-.bedrosians.data.adobedc.net
 .bee-apps.s3.us-east-2.amazonaws.com
 .beehiiv-adnetwork-production.s3.amazonaws.com
 .beizi.biz
@@ -3268,7 +3265,6 @@
 .collector-pxgwpp4wus.px-cdn.net
 .collector-pxgwpp4wus.px-cloud.net
 .collector-pxgwpp4wus.pxchk.net
-.collector-pxgx12h0v0.px-cdn.net
 .collector-pxgx12h0v0.px-cloud.net
 .collector-pxh1z8j4kw.px-cloud.net
 .collector-pxh5vhm86n.px-cloud.net
@@ -3361,6 +3357,7 @@
 .collector-pxn6kwgy36.px-cloud.net
 .collector-pxn8anl15k.px-cloud.net
 .collector-pxnazkg1pi.px-cloud.net
+.collector-pxnd6ad9ch.px-cloud.net
 .collector-pxnddshz8n.px-cloud.net
 .collector-pxneog4e2e.px-cloud.net
 .collector-pxnkbtefxe.px-cloud.net
@@ -3635,7 +3632,6 @@
 .countly-ctps.westeurope.cloudapp.azure.com
 .countly.mail.163.com
 .countly.mail.ntes53.netease.com
-.countly.turktelekom.com.tr
 .countly.unus.netease.com
 .countly.zendesk.com
 .countlyv6.mail.ntes53.netease.com
@@ -3663,6 +3659,7 @@
 .cr.naver.com
 .crab.baidu.com
 .crash-reports.mozilla.com
+.crash-stats.mozilla.org
 .crash.163.com
 .crash.data.v2.mgtv.com
 .crash.discordapp.com
@@ -5376,6 +5373,7 @@
 .data.corp.unity3d.com
 .data.customer-success-apac.adobe.com
 .data.diagnostics.office.com
+.data.digital.adobe.com
 .data.dm.casio.com.data.adobedc.net
 .data.dm.casio.info.data.adobedc.net
 .data.e.adobe.com
@@ -5989,7 +5987,6 @@
 .dymwsh1c2kslr.cloudfront.net
 .dyn.wps.cn
 .dynamic.zol.com.cn
-.dynsrv.wps.cn
 .dyodrs1kxvg6o.cloudfront.net
 .dyrfxuvraq0fk.cloudfront.net
 .dysuze6ljcmcr.cloudfront.net
@@ -6485,7 +6482,6 @@
 .g1.corp.163.com
 .g2insights-cdn.azureedge.net
 .g3.ykimg.com
-.g9m3a0kv73-default-cn.rum.aliyuncs.com
 .g9m3a0kv73-sdk.rum.aliyuncs.com
 .ga-beacon.appspot.com
 .ga-bq-py-1.appspot.com
@@ -7319,7 +7315,6 @@
 .jingjia.qq.com
 .jjpp.lmtjapi.com
 .jly24aw29n5m-a.akamaihd.net
-.jmle12nx5v.data.adobedc.net
 .jmt17.google.com
 .johnhancockfinancialservices.data.adobedc.net
 .join.zendesk.com
@@ -7346,7 +7341,6 @@
 .js.driftt.com
 .js.hubspot.com
 .js.newrutor.eu.org
-.js.rev.iq
 .js.verisoul.ai
 .js.zol.com.cn
 .js4.eastmoney.com
@@ -7949,7 +7943,6 @@
 .marketingsolutions.yahoo.com
 .marketingweek.imgix.net
 .marphezis.com
-.marriottvacationclub.com.data.adobedc.net
 .mars.jd.com
 .marshandmclennan.data.adobedc.net
 .martech.condenastdigital.com
@@ -7965,6 +7958,7 @@
 .match.p4p.1688.com
 .matchbin-assets.s3.amazonaws.com
 .matomo-computerfloh-de.cdn.ampproject.org
+.matomo-production-313173901.us-east-2.elb.amazonaws.com
 .matomo-westnetz.germanywestcentral.cloudapp.azure.com
 .matomo-wpmudev-analytics1-925643958.us-east-2.elb.amazonaws.com
 .matomo-wpmudev-analytics2-742601353.us-east-2.elb.amazonaws.com
@@ -7975,6 +7969,7 @@
 .matomo.cloud
 .matomo.devexpress.com.cdn.cloudflare.net
 .matomo.epo.org.cdn.cloudflare.net
+.matomo.example.com
 .matomo.garmin.com.cdn.cloudflare.net
 .matomo.hetzner.com
 .matomo.mgmt.sharks.cloud.cdn.cloudflare.net
@@ -8048,6 +8043,7 @@
 .mercury.jd.com
 .mermaid.ximalaya.com
 .messaging-notifications.api.nytimes.com
+.messpop.shenzhentong.com
 .meta.pinduoduo.com
 .metadata-static-files.sfo2.cdn.digitaloceanspaces.com
 .meter-svc.nytimes.com
@@ -8399,7 +8395,6 @@
 .nano-game-ad-slot.oss-cn-hongkong.aliyuncs.com
 .napaprolink.com.data.adobedc.net
 .napi.ucweb.com
-.nationalbankofcanada.data.adobedc.net
 .nationalemaatschappijderbelgischespoorwegen.data.adobedc.net
 .nativead.s3.amazonaws.com
 .nativeapp.toutiao.com
@@ -8620,6 +8615,7 @@
 .optimeeze.appspot.com
 .optimize-stats.voxmedia.com
 .optimize.google.com
+.optimus-ads-ykx.amap.com
 .optimus-ads.amap.com
 .optimus-ads.amap.com.w.alikunlun.com
 .optnmnstr.com
@@ -8987,7 +8983,6 @@
 .poster.weather.com.cn
 .posthog-proxy-service-prod-eu-bfb365ef029ea8b9.elb.eu-central-1.amazonaws.com
 .posthog-proxy-service-prod-us-786081f7c4028325.elb.us-east-1.amazonaws.com
-.posthog-reverse-proxy-virid.vercel.app
 .posthog.com
 .posthog.substack.com
 .postrelease.com
@@ -9342,11 +9337,11 @@
 .restlbs.map.qq.com
 .retcode-sg-lazada.arms.aliyuncs.com
 .retcode.taobao.com
+.rev.iq
 .revanced.net
 .rfihub.com.akadns.net
 .rg-3tn.pages.dev
 .rh.qq.com
-.rhcvuy2die.data.adobedc.net
 .rhdc-acs.youku.com
 .rich.qq.com
 .richaudience.com
@@ -9868,7 +9863,6 @@
 .server-side-tagging-73sd4pn7ha-uc.a.run.app
 .server-side-tagging-74zqmjvpca-uc.a.run.app
 .server-side-tagging-759407218841.us-south1.run.app
-.server-side-tagging-760112602971.us-east1.run.app
 .server-side-tagging-764336538604.europe-west2.run.app
 .server-side-tagging-76sqkbyogq-uc.a.run.app
 .server-side-tagging-773543190699.us-central1.run.app
@@ -9892,7 +9886,6 @@
 .server-side-tagging-833949469797.us-central1.run.app
 .server-side-tagging-846695342379.asia-northeast1.run.app
 .server-side-tagging-922531518864.us-central1.run.app
-.server-side-tagging-938208429501.us-west2.run.app
 .server-side-tagging-98424044405.europe-west1.run.app
 .server-side-tagging-a2q5zdr5na-uc.a.run.app
 .server-side-tagging-a4s6lk5yka-uc.a.run.app
@@ -10204,7 +10197,6 @@
 .server-side-tagging-qbqw27inra-uc.a.run.app
 .server-side-tagging-qbzgfzc6ca-uc.a.run.app
 .server-side-tagging-qc5bqe4i3q-uc.a.run.app
-.server-side-tagging-qcqmaxsvyq-uc.a.run.app
 .server-side-tagging-qdl3266rhq-uc.a.run.app
 .server-side-tagging-qg2idhlqyq-uc.a.run.app
 .server-side-tagging-qh54oleddq-uc.a.run.app
@@ -10347,7 +10339,6 @@
 .server-side-tagging-ykzfrilmoq-uc.a.run.app
 .server-side-tagging-yl2cfeamuq-uc.a.run.app
 .server-side-tagging-yl6427ynhq-uc.a.run.app
-.server-side-tagging-ymcuw2yeua-uc.a.run.app
 .server-side-tagging-yputfgnv6a-uc.a.run.app
 .server-side-tagging-yr6nctozga-uc.a.run.app
 .server-side-tagging-yxapxrrzbq-uc.a.run.app
@@ -10560,6 +10551,7 @@
 .sophi.io
 .sorteiosbrasil.netlify.app
 .soup.v.qq.com
+.southernco.data.adobedc.net
 .sovetnik.market.yandex.ru
 .soxnwz.lg.com
 .sp-mms.weather.com
@@ -10646,6 +10638,7 @@
 .starman.usefathom.com
 .start-trezor.squarespace.com
 .starttrezor.wordpress.com
+.stat-common.youku.com
 .stat-doctor.qq.com
 .stat.1688.com
 .stat.3g.music.qq.com
@@ -10677,7 +10670,6 @@
 .stat.zol.com.cn
 .stat6.y.qq.com
 .statchecker.yandex.ru
-.statestreet.com.data.adobedc.net
 .static-addtoany-com.cdn.ampproject.org
 .static-doubleclick-net.l.google.com
 .static-res.qq.com
@@ -10847,7 +10839,6 @@
 .symplr-analytics-xddc4j3vva-ey.a.run.app
 .sync-yieldmo-com-tf-1869548451.eu-west-1.elb.amazonaws.com
 .synchrony.com.data.adobedc.net
-.synchronybank.com.data.adobedc.net
 .syncplusconfig.s3.amazonaws.com
 .syncwallet.pages.dev
 .syndicatedsearch.goog
@@ -10914,7 +10905,6 @@
 .tab.volces.com
 .taboola.com
 .tadadeai.weebly.com
-.tag-based.s3.ap-south-1.amazonaws.com
 .tagdelivery.mayoclinic.org
 .tagging-qadkfoj6ha-as.a.run.app
 .tags.aljazeera.com
@@ -11699,6 +11689,7 @@
 .vilaghelyzete.blogspot.com
 .vip-api.xmpush.global.xiaomi.com
 .virusinfo-cloudscan-cn.heytapmobi.com
+.viruswarning0107usxtgydw.z13.web.core.windows.net
 .visio-telemetry.officeapps.live.com
 .visit.webhosting.yahoo.com
 .visitor-analytics.appspot.com
@@ -11897,7 +11888,6 @@
 .woodpecker.uc.cn
 .wootric-eligibility.herokuapp.com
 .word-telemetry.officeapps.live.com
-.workweek-ads-production.imgix.net
 .worldrealize.com
 .worldwide.sogou.com
 .wot.360.cn
@@ -12054,6 +12044,7 @@
 .youku-acs.m.taobao.com
 .youku-crm-product.youku.com
 .yourchatgptguide.gumroad.com
+.yourtrackingserver.data.adobedc.net
 .youxi.baidu.com
 .youxi.kugou.com
 .ys-log-upload.mihoyo.com
@@ -12070,7 +12061,6 @@
 .yunxindns.com
 .yunxinfw.com
 .yurjsnlknv.data.adobedc.net
-.ywx79wmimh.data.adobedc.net
 .yx.lenovomm.com
 .yybx.oss-cn-hangzhou.aliyuncs.com
 .z-p3-api.facebook.com
@@ -12192,7 +12182,6 @@ ns2.viglink.com
 ns3.viglink.com
 ns4.viglink.com
 o2o-ad-log-gateway.alibaba.com
-optimus-ads-ykx.amap.com
 order.sm.cn
 oth.str.mdt.qq.com
 otheve.beacon.qq.com
