--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-09 09:36:08
-# Total rules: 12229
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-09 15:12:03
+# Total rules: 12235
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -10,6 +10,7 @@
 .0m1hix10po.data.adobedc.net
 .0nvdw1kkeb.data.adobedc.net
 .0x00000000000.substack.com
+.1.66law.cn
 .1.wps.cn
 .1080872514.rsc.cdn77.org
 .1097834592.rsc.cdn77.org
@@ -1227,6 +1228,7 @@
 .ad-1258444056.cos.accelerate.myqcloud.com
 .ad-analysis.pconline.com.cn
 .ad-api.cnblogs.com
+.ad-api.gl-inet.com
 .ad-aspi.s3.amazonaws.com
 .ad-assets.futurecdn.net
 .ad-astra-mod.fandom.com
@@ -2908,6 +2910,7 @@
 .ced-ns.sascdn.com
 .ced.sascdn.com
 .cedarssinaimedicalcenter.data.adobedc.net
+.celtra.com
 .centene.com.data.adobedc.net
 .centene.data.adobedc.net
 .centralprovidentfundboard.data.adobedc.net
@@ -2945,6 +2948,7 @@
 .cheap-xanax-here.blogspot.com
 .checkx.pages.dev
 .cheezwhiz.z9.web.core.windows.net
+.chimpstatic.com
 .chit-chat-e9053-default-rtdb.firebaseio.com
 .chloro.trip.com
 .chnsrv.com
@@ -3630,6 +3634,7 @@
 .counterscale-bio.pages.dev
 .countly-api.mysugr.com.cdn.cloudflare.net
 .countly-ctps.westeurope.cloudapp.azure.com
+.countly.gl-inet.com
 .countly.mail.163.com
 .countly.mail.ntes53.netease.com
 .countly.unus.netease.com
@@ -5609,6 +5614,7 @@
 .diagmon-serviceapi.samsungdm.com
 .diagnostics.support.microsoft.com
 .diagramjawlineunhappy.com
+.dianomi.com
 .dianying-1304791696.cos.ap-shanghai.myqcloud.com
 .dibs-log.tumblr.com
 .dic9vgwbkxd8r.cloudfront.net
