--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-09 15:12:03
-# Total rules: 12235
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-09 20:26:37
+# Total rules: 12233
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -8,6 +8,7 @@
 .0gc6y58nkk.data.adobedc.net
 .0lovespells0.blogspot.com
 .0m1hix10po.data.adobedc.net
+.0m217fplbh.data.adobedc.net
 .0nvdw1kkeb.data.adobedc.net
 .0x00000000000.substack.com
 .1.66law.cn
@@ -1069,15 +1070,12 @@
 .a61135178.cdn.optimizely.com
 .a6131884851.cdn.optimizely.com
 .a6136581106.cdn.optimizely.com
-.a6146157886308352.cdn.optimizely.com
 .a6147442509348864.cdn.optimizely.com
 .a6147784059912192.cdn.optimizely.com
 .a6169963916951552.cdn.optimizely.com
 .a6194110778.cdn.optimizely.com
 .a6207300250632192.cdn.optimizely.com
 .a6207841426472960.cdn.optimizely.com
-.a6217617971609600.cdn.optimizely.com
-.a6238166017900544.cdn.optimizely.com
 .a6253774759526400.cdn.optimizely.com
 .a6263502310998016.cdn.optimizely.com
 .a627150995.cdn.optimizely.com
@@ -1256,7 +1254,6 @@
 .ad-log-upload.mihoyo.com
 .ad-ops-assets.s3.us-east-1.amazonaws.com
 .ad-pdf.s3.amazonaws.com
-.ad-reporting.forbes.com
 .ad-scope.com.cn
 .ad-sdk.huxiu.com
 .ad-serve.b-cdn.net
@@ -1521,7 +1518,6 @@
 .ads-monitoring.papegames.com
 .ads-privacy-api.prd.mz.internal.unity3d.com
 .ads-prod-narrowcasting.s3.us-west-2.amazonaws.com
-.ads-product-integration.googleusercontent.com
 .ads-production-public.s3.amazonaws.com
 .ads-production-public.s3.us-east-1.amazonaws.com
 .ads-rendering-prod.corp.google.com
@@ -1882,6 +1878,7 @@
 .ali-p2p-v2.pull.yximgs.com
 .ali-p2p.pull.yximgs.com
 .ali-web-player-tracker.biliapi.net
+.ali2.a.yximgs.com
 .alimama.alicdn.com
 .alime-pic.oss-cn-hangzhou.aliyuncs.com
 .alimelog.taobao.com
@@ -1890,6 +1887,7 @@
 .alitui.weibo.com
 .aliunion.cn.yahoo.com
 .aliyaoberbrunnergreg21.myshopify.com
+.alliancedata.data.adobedc.net
 .ally.data.adobedc.net
 .alphaupsell.s3.ap-northeast-2.amazonaws.com
 .alpwiijq5x.data.adobedc.net
@@ -2002,7 +2000,6 @@
 .analytics.bloomberg.com
 .analytics.brave.com
 .analytics.buy.yahoo.com
-.analytics.claro.com.br
 .analytics.clients6.google.com
 .analytics.cloud.coveo.com
 .analytics.cloud.unity3d.com
@@ -2913,7 +2910,6 @@
 .celtra.com
 .centene.com.data.adobedc.net
 .centene.data.adobedc.net
-.centralprovidentfundboard.data.adobedc.net
 .cert-test.sandbox.google.com
 .certify-issues-details-case.netlify.app
 .ceshi127722.obs.cn-north-4.myhuaweicloud.com
@@ -3138,7 +3134,6 @@
 .collector-px2e972lwz.px-cdn.net
 .collector-px2e972lwz.px-cloud.net
 .collector-px2sz8xyop.px-cloud.net
-.collector-px2yes24ut.px-cdn.net
 .collector-px2yes24ut.px-cloud.net
 .collector-px35v5ygcp.px-cloud.net
 .collector-px3c3ez9ug.px-cloud.net
@@ -6061,7 +6056,6 @@
 .eduad.baidu.com
 .eec.crunchyroll.com
 .eel.transistor.fm
-.eex8nehrx0-default-cn.rum.aliyuncs.com
 .ef-dongfeng.tanx.com
 .ef69yesd00-default-cn.rum.aliyuncs.com
 .effect.snssdk.com
@@ -6562,6 +6556,7 @@
 .geo.vortex.data.microsoft.com.akadns.net
 .geo.yahoo.com
 .geo2.adobe.com
+.geoapi123.appspot.com
 .geobeacon.ign.com
 .geoedge.be
 .geolocation.forbes.com
@@ -7733,7 +7728,6 @@
 .log32-normal-zr.tiktokv.com
 .log32-normal.capcutapi.com
 .log32-normal.tiktokv.com
-.log5-applog-hl.zijieapi.com
 .log5-applog-lf.zijieapi.com
 .log5-applog.zijieapi.com
 .log5-misc-hl.amemv.com
@@ -9026,6 +9020,7 @@
 .privacyfriendly.netlify.app
 .privchat-6cc58-default-rtdb.firebaseio.com
 .pro.baidu.com
+.prod-analytics-api-1407320161.ap-east-1.elb.amazonaws.com
 .prod-dem-collector-elb-611025824.eu-west-1.elb.amazonaws.com
 .prod-eh-v1-analytics.servicebus.windows.net
 .prod-event-relay-books-api.v.aaplimg.com
@@ -9892,6 +9887,7 @@
 .server-side-tagging-833949469797.us-central1.run.app
 .server-side-tagging-846695342379.asia-northeast1.run.app
 .server-side-tagging-922531518864.us-central1.run.app
+.server-side-tagging-938208429501.us-west2.run.app
 .server-side-tagging-98424044405.europe-west1.run.app
 .server-side-tagging-a2q5zdr5na-uc.a.run.app
 .server-side-tagging-a4s6lk5yka-uc.a.run.app
@@ -10176,7 +10172,6 @@
 .server-side-tagging-p6sczcweqa-uc.a.run.app
 .server-side-tagging-pa2qcydoqa-uc.a.run.app
 .server-side-tagging-pcrbhyajsa-uc.a.run.app
-.server-side-tagging-pd42r5yr4a-uc.a.run.app
 .server-side-tagging-pfb3tkcfna-uc.a.run.app
 .server-side-tagging-ph4bjl3uhq-uc.a.run.app
 .server-side-tagging-piacwjzpmq-uc.a.run.app
@@ -10297,7 +10292,6 @@
 .server-side-tagging-us-central1-p7etqvijvq-uc.a.run.app
 .server-side-tagging-utcyatujiq-uc.a.run.app
 .server-side-tagging-uuquiysayq-uc.a.run.app
-.server-side-tagging-v4eqfycxsq-uc.a.run.app
 .server-side-tagging-v5xhmilx6a-ww.a.run.app
 .server-side-tagging-v6r7ozl2lq-uc.a.run.app
 .server-side-tagging-v7yx4unsjq-uc.a.run.app
@@ -10395,6 +10389,7 @@
 .sg2p.wns.windows.com
 .sgali-mcs.byteoversea.com
 .sgaws-mcs.byteoversea.com
+.sgb8lk0jxu.data.adobedc.net
 .sgee-log.byteoversea.com
 .sgee-mcs.byteoversea.com
 .sgg.southcn.com
@@ -10427,7 +10422,6 @@
 .sharethis.com
 .sharethrough.com
 .shdid.me
-.shell.com.data.adobedc.net
 .shell.data.adobedc.net
 .shence-import.smzdm.com
 .shenghuo.xiaomi.com
@@ -10628,6 +10622,7 @@
 .st-fly.b-cdn.net
 .st-offlinegame.vivo.com.cn
 .st-sentinel.vivo.com.cn
+.st.appsad.cn
 .st3.wagbridge.advertisement.tanx.com
 .staging-analyze.pt.xiaomi.com
 .staging.ai.api.xiaomi.com
@@ -10676,6 +10671,7 @@
 .stat.zol.com.cn
 .stat6.y.qq.com
 .statchecker.yandex.ru
+.statestreet.com.data.adobedc.net
 .static-addtoany-com.cdn.ampproject.org
 .static-doubleclick-net.l.google.com
 .static-res.qq.com
@@ -11341,7 +11337,6 @@
 .tsn.baidu.com
 .tsyndicate.com
 .ttpsdk.info
-.ttr1udri3f.data.adobedc.net
 .ttse.b-cdn.net
 .tttppp.oss-cn-guangzhou.aliyuncs.com
 .tubescms.phncdn.com
@@ -11419,7 +11414,6 @@
 .ulic.baidu.com
 .ulink.cc.163.com
 .ulog-sdk.gifshow.com
-.ulog-sdk.ksapisrv.com
 .ulog.gifshow.com
 .ulog.imap.baidu.com
 .ulog.ksapisrv.com
@@ -11637,6 +11631,7 @@
 .vas-lf-x.snssdk.com
 .vatrack.hinet.net
 .vbc-telemetry-prod.s3.amazonaws.com
+.vbgdbyy9w7.data.adobedc.net
 .vbzxsg2ebt.data.adobedc.net
 .vc-server-side-tagging-tgro3cz6fq-nw.a.run.app
 .vcardsdkservice.vivo.com.cn
@@ -11696,6 +11691,9 @@
 .vip-api.xmpush.global.xiaomi.com
 .virusinfo-cloudscan-cn.heytapmobi.com
 .viruswarning0107usxtgydw.z13.web.core.windows.net
+.viruswarning0108us4rnynv.z13.web.core.windows.net
+.viruswarning0108usf4ddlk.z13.web.core.windows.net
+.viruswarning0108ust0dy2x.z13.web.core.windows.net
 .visio-telemetry.officeapps.live.com
 .visit.webhosting.yahoo.com
 .visitor-analytics.appspot.com
