--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-09 20:26:37
-# Total rules: 12233
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-10 10:45:30
+# Total rules: 12282
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -1515,6 +1515,7 @@
 .ads-img.mozilla.org
 .ads-jp.tiktok.com
 .ads-marketing-vivofs.vivo.com.cn
+.ads-meta-logo.s3.amazonaws.com
 .ads-monitoring.papegames.com
 .ads-privacy-api.prd.mz.internal.unity3d.com
 .ads-prod-narrowcasting.s3.us-west-2.amazonaws.com
@@ -1558,6 +1559,7 @@
 .ads.cup.com.cn
 .ads.economist.com
 .ads.eu.msn.com
+.ads.everesttech.net.akadns.net
 .ads.facebook.com
 .ads.finance.yahoo.com
 .ads.financialcontent.com
@@ -2225,6 +2227,7 @@
 .api.installer.xiaomi.com
 .api.intercom.io
 .api.io.mi.com
+.api.iterable.com
 .api.jr.mi.com
 .api.k.sohu.com
 .api.kingdata.ksyun.com
@@ -2423,6 +2426,7 @@
 .asimov-win.settings.data.microsoft.com.akadns.net
 .asrv-a.akamaihd.net
 .assemblyexchange.com
+.assets.iterable.com
 .assets.publicgood.com
 .assetsconfigcdn.org
 .assistant.pandora.xiaomi.com
@@ -2935,6 +2939,7 @@
 .chartbeat.net
 .chat.global.xiaomi.net
 .chat.voice-datings.workers.dev
+.chat.z.ai
 .chat1.jd.com
 .chatapp-6b96e-default-rtdb.firebaseio.com
 .chatenabled.mail.google.com
@@ -3124,9 +3129,11 @@
 .collector-px1azz2fhj.px-cloud.net
 .collector-px1ct9c6g3.px-cloud.net
 .collector-px1m6q11bc.px-cloud.net
+.collector-px1p77x9q9.px-cloud.net
 .collector-px1qo90wtr.px-cloud.net
 .collector-px1uglztko.px-cloud.net
 .collector-px1wqvvfc0.px-cloud.net
+.collector-px224mpq48.px-cloud.net
 .collector-px24c5soup.px-cloud.net
 .collector-px27m703hm.px-cloud.net
 .collector-px2bubkzbv.px-cdn.net
@@ -3151,6 +3158,7 @@
 .collector-px46uwk7he.px-cloud.net
 .collector-px4i06uv8m.px-cloud.net
 .collector-px4iknbf6x.px-cloud.net
+.collector-px4oaqzwak.px-cloud.net
 .collector-px4uazuiai.px-cloud.net
 .collector-px4vmagn4o.px-cloud.net
 .collector-px551mn3nq.px-cloud.net
@@ -3208,11 +3216,14 @@
 .collector-pxajdckzhd.px-cloud.net
 .collector-pxaoit9cn0.px-cloud.net
 .collector-pxaotqiwnf.px-cloud.net
+.collector-pxaqpjjt3x.px-cloud.net
 .collector-pxawqdobrw.px-cloud.net
 .collector-pxb47t2jmz.px-cloud.net
 .collector-pxb5ezgwhw.px-cloud.net
 .collector-pxbdaexv9t.px-cloud.net
+.collector-pxbe3rqbur.px-cloud.net
 .collector-pxbj5oofe8.px-cloud.net
+.collector-pxcarq85yu.px-cloud.net
 .collector-pxcfrcfefa.px-cloud.net
 .collector-pxckx6ilor.px-cdn.net
 .collector-pxckx6ilor.px-cloud.net
@@ -3233,6 +3244,7 @@
 .collector-pxdoe5cht3.px-cloud.net
 .collector-pxdojv695v.px-cloud.net
 .collector-pxdtszcz83.px-cloud.net
+.collector-pxdutzfcoj.px-cloud.net
 .collector-pxe8b8e9vd.px-cloud.net
 .collector-pxe97yvc0a.px-cloud.net
 .collector-pxebumdlwe.px-cdn.net
@@ -3243,6 +3255,7 @@
 .collector-pxf7je4fxv.px-cloud.net
 .collector-pxfdxb8emg.px-cloud.net
 .collector-pxferelyy8.px-cloud.net
+.collector-pxferos3vb.px-cloud.net
 .collector-pxfezbrgkr.px-cloud.net
 .collector-pxff0j69t5.px-cdn.net
 .collector-pxfofgwnle.px-cloud.net
@@ -3256,6 +3269,7 @@
 .collector-pxgeyljesk.px-cdn.net
 .collector-pxgeyljesk.px-cloud.net
 .collector-pxgeyljesk.pxchk.net
+.collector-pxghenmjv3.px-cloud.net
 .collector-pxghzdhy7f.px-cloud.net
 .collector-pxglfzcgpa.px-cloud.net
 .collector-pxgm4fv3vc.px-cloud.net
@@ -3335,7 +3349,9 @@
 .collector-pxktmrtopw.pxchk.net
 .collector-pxkxodf6rk.px-cdn.net
 .collector-pxkz8zzqmw.px-cloud.net
+.collector-pxl3efeja7.px-cloud.net
 .collector-pxlb0vny7w.px-cloud.net
+.collector-pxlcfmkcuv.px-cloud.net
 .collector-pxldlac4jd.px-cloud.net
 .collector-pxldm3ddsw.px-cdn.net
 .collector-pxldm3ddsw.px-cloud.net
@@ -3358,6 +3374,7 @@
 .collector-pxnazkg1pi.px-cloud.net
 .collector-pxnd6ad9ch.px-cloud.net
 .collector-pxnddshz8n.px-cloud.net
+.collector-pxnelrpptk.px-cloud.net
 .collector-pxneog4e2e.px-cloud.net
 .collector-pxnkbtefxe.px-cloud.net
 .collector-pxnkld3k8m.px-cloud.net
@@ -3365,6 +3382,7 @@
 .collector-pxns7abmiv.px-cloud.net
 .collector-pxnslc0hv5.px-cloud.net
 .collector-pxnyx0n2sc.px-cloud.net
+.collector-pxo3vo1zw7.px-cloud.net
 .collector-pxo4bopf13.px-cloud.net
 .collector-pxo7xa8y7a.px-cloud.net
 .collector-pxock1tfcy.px-cloud.net
@@ -3382,6 +3400,7 @@
 .collector-pxoyfhox4z.px-cloud.net
 .collector-pxp2oog666.px-cloud.net
 .collector-pxp5ddh5ft.px-cloud.net
+.collector-pxp6l6jdfq.px-cloud.net
 .collector-pxpb7sa58f.px-cloud.net
 .collector-pxpetgchhu.px-cdn.net
 .collector-pxpetgchhu.px-cloud.net
@@ -3389,16 +3408,20 @@
 .collector-pxpftaypj9.px-cloud.net
 .collector-pxpjrhlr4n.px-cloud.net
 .collector-pxpmq1d3fb.px-cloud.net
+.collector-pxpo11g9ah.px-cloud.net
 .collector-pxpoll8wvh.px-cloud.net
 .collector-pxpum5xzzw.px-cdn.net
 .collector-pxpum5xzzw.px-cloud.net
 .collector-pxpvnjmp4g.px-cdn.net
 .collector-pxpvnjmp4g.px-cloud.net
 .collector-pxpvnjmp4g.pxchk.net
+.collector-pxpx6fss1c.px-cloud.net
 .collector-pxq99aloxk.px-cloud.net
 .collector-pxqerrwgji.px-cloud.net
 .collector-pxqm4ecyhh.px-cloud.net
+.collector-pxqpjkmj2n.px-cloud.net
 .collector-pxqqxm841a.px-cloud.net
+.collector-pxqxgkwycg.px-cloud.net
 .collector-pxqxtwmr91.px-cloud.net
 .collector-pxr3pnvz1f.px-cloud.net
 .collector-pxr424oqs0.px-cloud.net
@@ -3421,6 +3444,7 @@
 .collector-pxsmtpgl4l.px-cdn.net
 .collector-pxsmtpgl4l.px-cloud.net
 .collector-pxsp9yp3kw.px-cloud.net
+.collector-pxspn2silb.px-cloud.net
 .collector-pxsw1vemrh.px-cdn.net
 .collector-pxsw1vemrh.px-cloud.net
 .collector-pxsw1vemrh.pxchk.net
@@ -3447,7 +3471,9 @@
 .collector-pxu6b0qd2s.px-cdn.net
 .collector-pxu6b0qd2s.px-cloud.net
 .collector-pxu6b0qd2s.pxchk.net
+.collector-pxucva8b9y.px-cloud.net
 .collector-pxuem2xini.px-cloud.net
+.collector-pxumwut9do.px-cloud.net
 .collector-pxur63h57z.px-cloud.net
 .collector-pxuueaxf9p.px-cloud.net
 .collector-pxv1hqbvho.px-cloud.net
@@ -3460,6 +3486,7 @@
 .collector-pxvlufj7uv.px-cdn.net
 .collector-pxvlufj7uv.px-cloud.net
 .collector-pxvlufj7uv.pxchk.net
+.collector-pxvnpbbfwe.px-cloud.net
 .collector-pxvtb0vdec.px-cloud.net
 .collector-pxvtidnbtc.px-cloud.net
 .collector-pxw0g1k35b.px-cloud.net
@@ -3468,6 +3495,7 @@
 .collector-pxwbxurdun.px-cloud.net
 .collector-pxwjdtmg7v.px-cloud.net
 .collector-pxwn0gh9ab.px-cloud.net
+.collector-pxwrwzgcun.px-cloud.net
 .collector-pxww4i4rc6.px-cloud.net
 .collector-pxwxsron7t.px-cloud.net
 .collector-pxx9lbctpg.px-cloud.net
@@ -3484,6 +3512,7 @@
 .collector-pxxt4gy2ig.px-cloud.net
 .collector-pxxtfdm2w9.px-cloud.net
 .collector-pxxyzdn30m.px-cloud.net
+.collector-pxyach2hjb.px-cloud.net
 .collector-pxyirejba7.px-cloud.net
 .collector-pxyjwbujsx.px-cloud.net
 .collector-pxyo6yjwlb.px-cloud.net
@@ -3504,6 +3533,7 @@
 .collector-pxzhh9f9x0.px-cdn.net
 .collector-pxzhh9f9x0.px-cloud.net
 .collector-pxzhh9f9x0.pxchk.net
+.collector-pxzitus4e5.px-cloud.net
 .collector-pxzneitfzp.px-cloud.net
 .collector-pxznu59zhd.px-cloud.net
 .collector-pxzviswmjw.px-cloud.net
@@ -5377,7 +5407,6 @@
 .data.dm.casio.com.data.adobedc.net
 .data.dm.casio.info.data.adobedc.net
 .data.e.adobe.com
-.data.em.viking.com.data.adobedc.net
 .data.em2.cloudflare.com
 .data.email-discovery.cjm.adobe.com
 .data.email-disney.cjm.adobe.com
@@ -5659,6 +5688,7 @@
 .dk57sacpbi4by.cloudfront.net
 .dk9ps7goqoeef.cloudfront.net
 .dkgp834o9n8xl.cloudfront.net
+.dkhtmc7ko8puc.cloudfront.net
 .dkj2m377b0yzw.cloudfront.net
 .dkm6b5q0h53z4.cloudfront.net
 .dknnlu3s1bnz7.cloudfront.net
@@ -5968,7 +5998,6 @@
 .dwnm2295blvjq.cloudfront.net
 .dwr3zytn850g.cloudfront.net
 .dwxjayoxbnyrr.cloudfront.net
-.dx-cards-css.iqiyi.com
 .dx6ctphzljkf1.cloudfront.net
 .dx6uy6q3udhkj.cloudfront.net
 .dxgo95ahe73e8.cloudfront.net
@@ -7341,6 +7370,7 @@
 .js-sec.indexww.com.cdn.cloudflare.net
 .js.driftt.com
 .js.hubspot.com
+.js.iterable.com
 .js.newrutor.eu.org
 .js.verisoul.ai
 .js.zol.com.cn
@@ -7374,6 +7404,7 @@
 .kargo.com
 .kb-render.alicdn.com
 .kbnetworkz.s3.amazonaws.com
+.kbox-analytics-backup.s3-accelerate.amazonaws.com
 .kbox-analytics-prod.s3-accelerate.amazonaws.com
 .kbox-analytics-prod.s3.amazonaws.com
 .kcart.alipay.com
@@ -7389,6 +7420,7 @@
 .kgipadstatbak.kugou.com
 .kgmobilestat.kugou.com
 .kgmobilestatbak.kugou.com
+.kic-ngfts.lge.com
 .kiks.yandex.ru
 .kinesis.eu-west-1.amazonaws.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
@@ -7889,6 +7921,7 @@
 .luban.m.qq.com
 .luckycat-power.snssdk.com
 .luimg.baidu.com
+.luna-aggregated-metrics-prod.s3.amazonaws.com
 .lupic.cdn.bcebos.com
 .lvip.youku.com
 .lx0.meituan.com
@@ -8082,6 +8115,7 @@
 .metrics.hbr.org
 .metrics.hyperliquid.xyz
 .metrics.icloud.com
+.metrics.imdb.com
 .metrics.kiwix.org
 .metrics.manus.im
 .metrics.mastercard.com
@@ -8348,6 +8382,7 @@
 .multi-az-ulog.ksapisrv.com
 .mum.alibabachengdun.com
 .mum.alibabachengdun.net
+.muon-collector-kube-1510719261.ca-central-1.elb.amazonaws.com
 .musculahq.appspot.com
 .mvads.kugou.com
 .mvchallenges.s3-website-eu-west-1.amazonaws.com
@@ -9000,6 +9035,7 @@
 .pr.nss.netease.com
 .pr.prnewswire.com
 .practivate.adobe.com
+.prd-qlik-telemetry.servicebus.windows.net
 .prd-usw2-requestattribution-iad.apple.com
 .prebid-collector-lb-321145981.eu-west-1.elb.amazonaws.com
 .prebid.scope3.com
@@ -9486,6 +9522,7 @@
 .ru.video.intl.xiaomi.com
 .rubiconproject.com
 .rubiconproject.net.akadns.net
+.ruc-ngfts.lge.com
 .rudder-tracking.rudderstack.com
 .rum-collector.leaderint.workers.dev
 .rum-metrics.bunny.net
@@ -9521,6 +9558,7 @@
 .s.img.mix.sina.com.cn
 .s.infogram.com
 .s.lenovo.com
+.s.media-imdb.com
 .s.news.naver.com
 .s.p.youku.com
 .s.pcapps.qq.com
@@ -9888,6 +9926,7 @@
 .server-side-tagging-846695342379.asia-northeast1.run.app
 .server-side-tagging-922531518864.us-central1.run.app
 .server-side-tagging-938208429501.us-west2.run.app
+.server-side-tagging-965440604880.europe-west1.run.app
 .server-side-tagging-98424044405.europe-west1.run.app
 .server-side-tagging-a2q5zdr5na-uc.a.run.app
 .server-side-tagging-a4s6lk5yka-uc.a.run.app
@@ -9897,6 +9936,7 @@
 .server-side-tagging-acih5gtfgq-uc.a.run.app
 .server-side-tagging-aetyeub57a-uc.a.run.app
 .server-side-tagging-agl2jup2aa-uc.a.run.app
+.server-side-tagging-agrgoampdq-uc.a.run.app
 .server-side-tagging-aikuysmm4a-uc.a.run.app
 .server-side-tagging-airo4znvnq-uc.a.run.app
 .server-side-tagging-ajszjymjga-uc.a.run.app
@@ -9904,6 +9944,7 @@
 .server-side-tagging-apfdb3qbwq-uc.a.run.app
 .server-side-tagging-aqwpviq3ba-uc.a.run.app
 .server-side-tagging-aza5ekswqa-uc.a.run.app
+.server-side-tagging-b2c2itg3wq-uc.a.run.app
 .server-side-tagging-b3vawfhz7a-uc.a.run.app
 .server-side-tagging-b4b35m77ha-uc.a.run.app
 .server-side-tagging-b6eune4xaa-uc.a.run.app
@@ -9964,6 +10005,7 @@
 .server-side-tagging-eu-5hbdeusn7q-ez.a.run.app
 .server-side-tagging-eu-7twoo26kcq-ew.a.run.app
 .server-side-tagging-eu-m4kh6mjypa-nw.a.run.app
+.server-side-tagging-eu-noroh2unha-ez.a.run.app
 .server-side-tagging-eu-production-925055733921.europe-west1.run.app
 .server-side-tagging-eu-ziicfw44ia-oc.a.run.app
 .server-side-tagging-europe-qvautbez2a-ew.a.run.app
@@ -9986,6 +10028,7 @@
 .server-side-tagging-fhwgfw3fiq-uc.a.run.app
 .server-side-tagging-fjallraven-ipe62hiwta-ew.a.run.app
 .server-side-tagging-fmd7ibkj2q-uc.a.run.app
+.server-side-tagging-fn5ng6n2ka-uc.a.run.app
 .server-side-tagging-fpze4punyq-uc.a.run.app
 .server-side-tagging-fqu3nt7xsa-uc.a.run.app
 .server-side-tagging-frd4rkhtqq-uc.a.run.app
@@ -10021,6 +10064,7 @@
 .server-side-tagging-hangnitwaa-uc.a.run.app
 .server-side-tagging-hayzpmf72a-uc.a.run.app
 .server-side-tagging-hddrfyouaa-uc.a.run.app
+.server-side-tagging-hdsbbjsfma-uc.a.run.app
 .server-side-tagging-he3u4nhsuq-uc.a.run.app
 .server-side-tagging-hezmbyn5ka-uc.a.run.app
 .server-side-tagging-hflvsypeyq-uc.a.run.app
@@ -10060,6 +10104,7 @@
 .server-side-tagging-irsgboekxa-uc.a.run.app
 .server-side-tagging-itzxv3dmea-ew.a.run.app
 .server-side-tagging-iu2en2bbcq-uc.a.run.app
+.server-side-tagging-iwumrqn3ia-uc.a.run.app
 .server-side-tagging-ix7rfizdvq-uc.a.run.app
 .server-side-tagging-ixlashmtpa-uc.a.run.app
 .server-side-tagging-j2rpy5oxlq-ew.a.run.app
@@ -10106,6 +10151,7 @@
 .server-side-tagging-lfroe6mcoa-uc.a.run.app
 .server-side-tagging-lgicewewha-uc.a.run.app
 .server-side-tagging-lhf4py773a-uc.a.run.app
+.server-side-tagging-livx3p2vba-uc.a.run.app
 .server-side-tagging-ljd4ckkpvq-uc.a.run.app
 .server-side-tagging-lmmeqsrqaa-uc.a.run.app
 .server-side-tagging-lmpl-vrtdynr37q-lm.a.run.app
@@ -10116,6 +10162,7 @@
 .server-side-tagging-lxwfwdlp7q-ue.a.run.app
 .server-side-tagging-ly5bolfzlq-uc.a.run.app
 .server-side-tagging-lzwk2fx32a-uc.a.run.app
+.server-side-tagging-maafcqllza-uc.a.run.app
 .server-side-tagging-mb2z4fodua-uc.a.run.app
 .server-side-tagging-mbtzbqvz5q-uc.a.run.app
 .server-side-tagging-mcoktzxcna-uc.a.run.app
@@ -10260,6 +10307,7 @@
 .server-side-tagging-tl4slf67da-uc.a.run.app
 .server-side-tagging-tmvkq3scfa-uc.a.run.app
 .server-side-tagging-tqmpzsgt4q-uc.a.run.app
+.server-side-tagging-tsdmqdnf3q-uc.a.run.app
 .server-side-tagging-ttecrqlbma-uc.a.run.app
 .server-side-tagging-tv5qpkgqeq-uc.a.run.app
 .server-side-tagging-tw-bdi3akkqva-de.a.run.app
@@ -10273,6 +10321,7 @@
 .server-side-tagging-ua-ujsfw7lbrq-lm.a.run.app
 .server-side-tagging-ua2xgvgooa-uc.a.run.app
 .server-side-tagging-ucumduhz7a-uc.a.run.app
+.server-side-tagging-ucwrz57auq-uc.a.run.app
 .server-side-tagging-ue2x2yllda-uc.a.run.app
 .server-side-tagging-uf7tmkx7ga-uc.a.run.app
 .server-side-tagging-uhdgomz7ma-lm.a.run.app
@@ -10918,6 +10967,7 @@
 .talkback-reports.mozilla.org
 .talkback.mozilla.org
 .tandc.salesforce.com
+.tangible-analytics.appspot.com
 .tangyamount.com
 .taobao.qq.com
 .tap-nexus.appspot.com
@@ -11640,7 +11690,6 @@
 .vcode-od.vivo.com.cn
 .vconf.f.360.cn
 .vcs.zijieapi.com
-.vcsa.telemetry.broadcom.com.cdn.cloudflare.net
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
 .vebo-vast.pages.dev
